# printime

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml
config/: printer.example.yaml  printer.yaml
docs/: ANYTYPE.md  COMMANDS.md  CONFIG.md  GCAL.md  HOTKEYS.md  KEEP.md  NATIVE.md  QUICKSTART.md  TEMPLATES.md
examples/: anytype-invites.txt  checklist.md  code_snippet.md  complex_equation.md  diagram_flow.md  email.json  email.md  equation_einstein.md  jira.md  latex_einstein.md  latex_gaussian.md  latex_stokes.md  latex_trig.md  math_and_code.md  my-diagram.md  note.md  oriel-mandates.md  quantum_physics.md  task.md  test.md  the-mandates.md
printime/: agent_eval.py  cli.py  cli_epilog.py  cli_help.py  cli_parser.py  config.py  eval_runner.py  intents.py  preview.py  preview_capture.py  preview_qr.py  styled.py  template_defaults.py  text_encoding.py
printime/services/: anytype.py  ascii_art.py  checklist.py  diagram.py  enrich.py  fetch_url.py  gcal.py  keep.py  link_qr.py  markdown_blocks.py  tickets.py  transform.py
scripts/: anytype-print.sh  print-ticket.sh  print-url.sh
skill/: printime.md
skills/: printime.md
templates/: agenda.j2  agenda.yaml  checklist.j2  checklist.yaml  diagram.j2  diagram.yaml  document.j2  document.yaml  email.j2  email.yaml  equation.j2  equation.yaml  heading.j2  heading.yaml  jira.j2  jira.yaml  message.j2  message.yaml  note.j2  note.yaml  receipt.j2  receipt.yaml  task.j2  task.yaml  ticket.j2  ticket.yaml
tests/: test_anytype.py  test_ascii_art.py  test_checklist_cli.py  test_enrich.py  test_eval_runner.py  test_fetch_url_links.py  test_images.py  test_intents.py  test_keep.py  test_preview_capture.py  test_preview_qr.py  test_printime.py  test_styled.py  test_text_encoding.py  test_tickets.py
udev/: 80-pos8370.rules
(+10 files in other folders)
