[project]
name = "printime"
version = "0.1.0"
description = "Thermal printer CLI with templates, preview, and service integrations"
authors = [{name = "Oriel"}]
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
    "qrcode>=8.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "python-escpos>=3.1",
    "pyusb>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
tickets = [
    "pymupdf>=1.24.0",
    "pyzbar>=0.1.9",
    "markitdown[pdf]>=0.1.0",
    "opencv-python-headless>=4.8.0",
]
keep = ["gkeepapi>=0.14.0"]
all = ["printime[tickets,keep,dev]"]

[project.scripts]
printime = "printime.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["printime*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]